# touchcli

./: .env.development  .env.example  .env.production  .env.staging  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_GAPS.md  AUDIT_ORIGINAL_COMPARE.md  BLACKBOARD.md  CI_CD_SETUP.md  CLAUDE.md  DECISIONS.md  DEPLOYMENT.md  DEPLOYMENT_READINESS_STATUS.md  DESIGN.md  DEVELOPER_SETUP.md  ENVIRONMENT_CONFIGURATION.md  FINAL_STATUS.md  HANDOFF_INDEX.md  LICENSE  LOGGING_STANDARDS.md  MOLT_PHEROMONE_2026_03_02.md  MOLT_PHEROMONE_2026_03_02_PHASE3.md  MOLT_PHEROMONE_2026_03_02_S005.md  MOLT_PHEROMONE_2026_03_02_SCOUT.md  OPERATIONS_GUIDE.md  PHASE_1.md  PHASE_2_COMPLETION.md  PHASE_2_PLAN.md  PHASE_3_5_PLAN.md  PHASE_3_6_PLAN.md  PHASE_3_7_PLAN.md  PHASE_3_FRONTEND.md  PHASE_3_HANDOFF.md  PHASE_3_PLAN.md  PHASE_3_QUICK_WINS_COMPLETE.md  PHEROMONE_DEPLOYMENT_RECONNAISSANCE.md  PHEROMONE_PHASE_3_5_RECONNAISSANCE.md  PHEROMONE_PHASE_3_6_RECONNAISSANCE.md  (+37 more)
backend/python/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run_benchmarks.py  seeds.py
backend/python/agent_service/: __init__.py  auth.py  benchmarks.py  config.py  db.py  main.py  models.py  s005_db_benchmark.py  s005_websocket_probe.py  schemas.py  seeds.py  tasks.py  websocket_benchmark.py  workflow.py
backend/python/agent_service/agents/: __init__.py  base_agent.py  data_agent.py  router_agent.py  sales_agent.py  strategy_agent.py
backend/python/migrations/: __init__.py  env.py
backend/python/migrations/versions/: 001_initial_schema.py  (+1 more)
backend/python/tests/: __init__.py  conftest.py  test_integration.py
(+175 files in other folders)
