[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "touchcli-agent-service"
version = "0.1.0"
description = "TouchCLI Agent Service - Conversational Sales Assistant Backend"
authors = [
    {name = "TouchCLI Team", email = "team@touchcli.local"}
]
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.0",
    "redis==5.0.1",
    "celery==5.3.4",
    "langgraph==0.0.1",
    "langchain==0.0.340",
    "openai==1.3.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "structlog==23.3.0",
    "prometheus-client==0.19.0",
    "websockets==12.0",
    "python-socketio==5.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.13.2",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
